force-app/main/default/objects/Marketing_Event__c/fields/Request_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Submission_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Request Submission Date</label>
    <type>Date</type>
</CustomField>