force-app/main/default/objects/Marketing_Event__c/fields/requester_user__c.field-meta.xml
<CustomField>
    <fullName>requester_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>