force-app/main/default/objects/Marketing_Event__c/fields/Return_Labels_Needed__c.field-meta.xml
<CustomField>
    <fullName>Return_Labels_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Labels Needed?</label>
    <type>Checkbox</type>
</CustomField>