force-app/main/default/objects/Marketing_Event__c/fields/RPMDS_ROI__c.field-meta.xml
<CustomField>
    <fullName>RPMDS_ROI__c</fullName>
    <formula>IF(AND(Closed_Loan_Revenue__c&gt;0,Event_Cost__c&gt;0), Closed_Loan_Revenue__c / Event_Cost__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RPMDS/ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>