force-app/main/default/objects/Marketing_Event__c/fields/Shipping_Address_If_Different__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_If_Different__c</fullName>
    <label>Shipping Address &amp; Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>