force-app/main/default/objects/Marketing_Event__c/fields/Signage__c.field-meta.xml
<CustomField>
    <fullName>Signage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signage?</label>
    <type>Checkbox</type>
</CustomField>