force-app/main/default/objects/Marketing_Event__c/fields/Snacks__c.field-meta.xml
<CustomField>
    <fullName>Snacks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snacks</label>
    <type>Checkbox</type>
</CustomField>