force-app/main/default/objects/Marketing_Event__c/fields/Speaking_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaking Opportunity?</label>
    <type>Checkbox</type>
</CustomField>