force-app/main/default/objects/Marketing_Event__c/fields/Submitted_By2__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By2__c</fullName>
    <formula>CreatedBy.Username</formula>
    <label>Submitted By</label>
    <type>Text</type>
</CustomField>