force-app/main/default/objects/Marketing_Event__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6&apos; table</fullName>
            </value>
            <value>
                <fullName>8&apos; table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>