force-app/main/default/objects/Marketing_Event__c/fields/Team_Leader_Approved__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Leader Approved</label>
    <type>Checkbox</type>
</CustomField>