force-app/main/default/objects/Marketing_Event__c/fields/Team_Members_Attending__c.field-meta.xml
<CustomField>
    <fullName>Team_Members_Attending__c</fullName>
    <label>Team Members Attending</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alix Dickson</fullName>
            </value>
            <value>
                <fullName>Anna Becker</fullName>
            </value>
            <value>
                <fullName>Anthony Hughes</fullName>
            </value>
            <value>
                <fullName>Ashley Allison</fullName>
            </value>
            <value>
                <fullName>Ashley Slusser</fullName>
            </value>
            <value>
                <fullName>Ashley Spangler</fullName>
            </value>
            <value>
                <fullName>Bridget Welsh</fullName>
            </value>
            <value>
                <fullName>Carolyn Palafox</fullName>
            </value>
            <value>
                <fullName>Chan&apos;tay Robins</fullName>
            </value>
            <value>
                <fullName>Chase Fitzpatrick</fullName>
            </value>
            <value>
                <fullName>Eddie DeRonne</fullName>
            </value>
            <value>
                <fullName>Emily Roy</fullName>
            </value>
            <value>
                <fullName>Emily Sheng</fullName>
            </value>
            <value>
                <fullName>Emily Stark</fullName>
            </value>
            <value>
                <fullName>Faten Amine</fullName>
            </value>
            <value>
                <fullName>Jason Miller</fullName>
            </value>
            <value>
                <fullName>Jeff Wissman</fullName>
            </value>
            <value>
                <fullName>Jennifer Lundgren</fullName>
            </value>
            <value>
                <fullName>Jim Woodworth</fullName>
            </value>
            <value>
                <fullName>Joe Dudek</fullName>
            </value>
            <value>
                <fullName>Joelle Maes</fullName>
            </value>
            <value>
                <fullName>Jordan Joseph</fullName>
            </value>
            <value>
                <fullName>Josh Babb</fullName>
            </value>
            <value>
                <fullName>Karen Polzin</fullName>
            </value>
            <value>
                <fullName>Katelyn Lalinsky</fullName>
            </value>
            <value>
                <fullName>Kayla Jimenez</fullName>
            </value>
            <value>
                <fullName>Kelly Hickoff</fullName>
            </value>
            <value>
                <fullName>Kiaira May</fullName>
            </value>
            <value>
                <fullName>Krisna Evenson</fullName>
            </value>
            <value>
                <fullName>Kristina Gianuario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>