force-app/main/default/objects/Marketing_Event__c/fields/TML_Pamphlets__c.field-meta.xml
<CustomField>
    <fullName>TML_Pamphlets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TML Pamphlets</label>
    <type>Checkbox</type>
</CustomField>