force-app/main/default/objects/Marketing_Event__c/fields/Trinkets_Needed__c.field-meta.xml
<CustomField>
    <fullName>Trinkets_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trinkets Needed?</label>
    <type>Checkbox</type>
</CustomField>