force-app/main/default/objects/Marketing_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solo Email</fullName>
            </value>
            <value>
                <fullName>Group Email</fullName>
            </value>
            <value>
                <fullName>Welcome Email</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Benefit Fair</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn</fullName>
            </value>
            <value>
                <fullName>Specialized Web Placement</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Sponsored Event</fullName>
            </value>
            <value>
                <fullName>Attending Event</fullName>
            </value>
            <value>
                <fullName>Social-Facebook</fullName>
            </value>
            <value>
                <fullName>Social-Twitter</fullName>
            </value>
            <value>
                <fullName>Social-Instagram</fullName>
            </value>
            <value>
                <fullName>Social-LinkedIn</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>IHR Communication</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Huddles</fullName>
            </value>
            <value>
                <fullName>Rock World Post</fullName>
            </value>
            <value>
                <fullName>Team Member Referral</fullName>
            </value>
            <value>
                <fullName>Team Member Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>