force-app/main/default/objects/Marketing_Event__c/fields/Type_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Engagement__c</fullName>
    <label>Type of Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERC</fullName>
            </value>
            <value>
                <fullName>SRRC</fullName>
            </value>
            <value>
                <fullName>Smaller Event</fullName>
            </value>
            <value>
                <fullName>Connection Log</fullName>
            </value>
            <value>
                <fullName>Happy Hour</fullName>
            </value>
            <value>
                <fullName>Round Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>