force-app/main/default/objects/Marketing_Event__c/fields/Type_of_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Webinar__c</fullName>
    <label>Type of Webinar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage 101</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Condo 101</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>Home Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>