force-app/main/default/objects/Marketing_Event__c/fields/User_Provisioning_Request__c.field-meta.xml
<CustomField>
    <fullName>User_Provisioning_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Provisioning Request</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>