force-app/main/default/objects/Marketing_Event__c/fields/Was_Gift_Offer_Taken__c.field-meta.xml
<CustomField>
    <fullName>Was_Gift_Offer_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Gift Offer Taken?</label>
    <type>Checkbox</type>
</CustomField>