force-app/main/default/objects/Marketing_Event__c/fields/Webinar_Host__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The BizDev team member that will host the webinar</inlineHelpText>
    <label>Webinar Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>