force-app/main/default/objects/Marketing_Event__c/fields/What_s_Included_in_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>What_s_Included_in_Sponsorship__c</fullName>
    <label>What&apos;s Included in Sponsorship?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>