force-app/main/default/objects/Marketing_Event__c/recordTypes/Banker_Office_Hours.recordType-meta.xml
<RecordType>
    <fullName>Banker_Office_Hours</fullName>
    <active>true</active>
    <label>Banker Office Hours</label>
</RecordType>