force-app/main/default/objects/Marketing_Event__c/recordTypes/Banker_Onsite.recordType-meta.xml
<RecordType>
    <fullName>Banker_Onsite</fullName>
    <active>true</active>
    <label>Banker Onsite</label>
</RecordType>