force-app/main/default/objects/Marketing_Event__c/recordTypes/Benefit_Partner_Non_Fair.recordType-meta.xml
<RecordType>
    <fullName>Benefit_Partner_Non_Fair</fullName>
    <active>false</active>
    <label>Benefit Partner (Non-Fair)</label>
</RecordType>