force-app/main/default/objects/Marketing_Event__c/recordTypes/Desk_Drop.recordType-meta.xml
<RecordType>
    <fullName>Desk_Drop</fullName>
    <active>true</active>
    <label>Desk Drop</label>
</RecordType>