force-app/main/default/objects/Marketing_Event__c/recordTypes/Direct_Mail.recordType-meta.xml
<RecordType>
    <fullName>Direct_Mail</fullName>
    <active>true</active>
    <label>Direct Mail</label>
</RecordType>