force-app/main/default/objects/Marketing_Event__c/recordTypes/Gift.recordType-meta.xml
<RecordType>
    <fullName>Gift</fullName>
    <active>true</active>
    <label>Gift</label>
</RecordType>