force-app/main/default/objects/Marketing_Event__c/recordTypes/Group_Email.recordType-meta.xml
<RecordType>
    <fullName>Group_Email</fullName>
    <active>true</active>
    <label>Group Email</label>
</RecordType>