force-app/main/default/objects/Marketing_Event__c/recordTypes/Huddle.recordType-meta.xml
<RecordType>
    <fullName>Huddle</fullName>
    <active>true</active>
    <label>Huddle</label>
</RecordType>