force-app/main/default/objects/Marketing_Event__c/recordTypes/Industry_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Industry_Engagement</fullName>
    <active>true</active>
    <label>Industry Engagement</label>
</RecordType>