force-app/main/default/objects/Marketing_Event__c/recordTypes/Lunch_Learn.recordType-meta.xml
<RecordType>
    <fullName>Lunch_Learn</fullName>
    <active>true</active>
    <label>Lunch &amp; Learn</label>
</RecordType>