force-app/main/default/objects/Marketing_Event__c/recordTypes/Print.recordType-meta.xml
<RecordType>
    <fullName>Print</fullName>
    <active>true</active>
    <label>Print</label>
</RecordType>