force-app/main/default/objects/Marketing_Event__c/recordTypes/Snack_Learn.recordType-meta.xml
<RecordType>
    <fullName>Snack_Learn</fullName>
    <active>true</active>
    <label>Snack &amp; Learn</label>
</RecordType>