force-app/main/default/objects/Marketing_Event__c/recordTypes/Social_Media.recordType-meta.xml
<RecordType>
    <fullName>Social_Media</fullName>
    <active>true</active>
    <label>Social Media</label>
</RecordType>