force-app/main/default/objects/Marketing_Event__c/recordTypes/Solo_Email.recordType-meta.xml
<RecordType>
    <fullName>Solo_Email</fullName>
    <active>true</active>
    <label>Solo Email</label>
</RecordType>