force-app/main/default/objects/Marketing_Event__c/recordTypes/Specialize_Web_Placement.recordType-meta.xml
<RecordType>
    <fullName>Specialize_Web_Placement</fullName>
    <active>true</active>
    <label>Specialized Web Placement</label>
</RecordType>