force-app/main/default/objects/Marketing_Event__c/recordTypes/Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Team_Member</fullName>
    <active>false</active>
    <label>Team Member</label>
</RecordType>