force-app/main/default/objects/Marketing_Event__c/recordTypes/Team_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Team_Promotion</fullName>
    <active>true</active>
    <label>Team Promotion</label>
</RecordType>