force-app/main/default/objects/Marketing_Event__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Marketing_Activity_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Event__c.Event</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Stark</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Events</label>
</ListView>