force-app/main/default/objects/Marketing_Event__c/listViews/All_Mktg_Activities_Created_This_Year.listView-meta.xml
<ListView>
    <fullName>All_Mktg_Activities_Created_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Activity_Name__c</columns>
    <columns>Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>requester_user__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Event__c.Event</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All Mktg Activities Created This Year</label>
    <sharedTo>
        <role>Marketing_Team_Leader</role>
        <role>Marketing_Team_Member</role>
    </sharedTo>
</ListView>