force-app/main/default/objects/Marketing_Event__c/listViews/Copy_of_Events.listView-meta.xml
<ListView>
    <fullName>Copy_of_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of Events</label>
</ListView>