force-app/main/default/objects/Marketing_Event__c/listViews/Jennifer_Lundgren_Marketing_Activities.listView-meta.xml
<ListView>
    <fullName>Jennifer_Lundgren_Marketing_Activities</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>jlund</value>
    </filters>
    <label>Jennifer Lundgren Marketing Activities</label>
</ListView>