force-app/main/default/objects/Marketing_Event__c/listViews/Marscha_s_MAs.listView-meta.xml
<ListView>
    <fullName>Marscha_s_MAs</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Activity_Name__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>requester_user__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Marscha</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <label>Marscha&apos;s MAs</label>
</ListView>