force-app/main/default/objects/Marketing_Event__c/listViews/Nick_Gayde_Marketing_Activities.listView-meta.xml
<ListView>
    <fullName>Nick_Gayde_Marketing_Activities</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>ngayd</value>
    </filters>
    <label>Nick Gayde Marketing Activities</label>
</ListView>