force-app/main/default/objects/Marketing_Event__c/listViews/Pat_s_Marketing_Activities.listView-meta.xml
<ListView>
    <fullName>Pat_s_Marketing_Activities</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Activity_Name__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Assigned_Marketing_Team_Member__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Channel__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Table__c</field>
        <operation>equals</operation>
        <value>6&apos; table,8&apos; table</value>
    </filters>
    <filters>
        <field>Trinkets_Needed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed,Rejected</value>
    </filters>
    <label>Lynsey&apos;s Events to Manage</label>
</ListView>