force-app/main/default/objects/Marketing_Event__c/listViews/Q4_Trinkets.listView-meta.xml
<ListView>
    <fullName>Q4_Trinkets</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Trinkets_Needed__c</columns>
    <columns>Audience_Size__c</columns>
    <columns>of_Team_Members_Attending__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2018</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2018</value>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>MI</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Event__c.Event</value>
    </filters>
    <label>Q4 Trinkets</label>
</ListView>