force-app/main/default/objects/Marketing_Event__c/listViews/Steve.listView-meta.xml
<ListView>
    <fullName>Steve</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>sshoe</value>
    </filters>
    <label>Steve Shoemaker Marketing Activities</label>
</ListView>